--- a/package.json
+++ b/package.json
@@ -23,15 +23,19 @@
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/typography": "^0.5.16",
 		"autoprefixer": "^10.4.20",
+		"bits-ui": "^0.22.0",
 		"clsx": "^2.1.1",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^2.46.1",
 		"globals": "^15.14.0",
+		"lucide-svelte": "^0.473.0",
+		"mode-watcher": "^0.5.0",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"svelte-sonner": "^0.3.28",
 		"tailwind-merge": "^2.6.0",
 		"tailwind-variants": "^0.3.1",
 		"tailwindcss": "^3.4.17",
@@ -40,6 +44,9 @@
 		"vite": "^6.0.0"
 	},
 	"dependencies": {
-		"@tailwindcss/vite": "^4.0.0"
+		"@libsql/kysely-libsql": "^0.4.1",
+		"@tailwindcss/vite": "^4.0.0",
+		"better-auth": "^1.1.14",
+		"effect": "^3.12.7"
 	}
 }
