--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.20.0",
+    "vaul-svelte": "^0.3.2",
     "vite": "^6.0.0"
   },
   "dependencies": {
