--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "ai": "^4.1.10",
     "better-auth": "^1.1.14",
     "effect": "^3.12.7",
+    "marked": "^15.0.6",
     "zod": "^3.24.1"
   }
 }
