--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 		"better-auth": "^1.1.14",
 		"effect": "^3.12.7",
 		"marked": "^15.0.6",
+		"temporal-polyfill": "^0.2.5",
 		"zod": "^3.24.1"
 	}
 }
