--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "autoprefixer": "^10.4.20",
     "bits-ui": "0.22.0",
     "clsx": "^2.1.1",
+    "drizzle-kit": "^0.30.5",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-svelte": "^2.46.1",
@@ -47,12 +48,14 @@
   "dependencies": {
     "@ai-sdk/openai": "^1.1.5",
     "@ai-sdk/svelte": "^1.1.20",
+    "@libsql/client": "^0.14.0",
     "@libsql/kysely-libsql": "^0.4.1",
     "@sentry/sveltekit": "^8",
     "@tailwindcss/vite": "^4.0.0",
     "@vercel/speed-insights": "^1.2.0",
     "ai": "^4.1.10",
     "better-auth": "^1.1.14",
+    "drizzle-orm": "^0.40.0",
     "effect": "^3.12.7",
     "marked": "^15.0.6",
     "replicache": "^15.0.1",
